# godlyforge

./: README.md  package-lock.json  package.json  tsconfig.json
agents/: .gitignore  README.md  pyproject.toml
agents/hf_agent_tools/: __init__.py  __main__.py  hf_runner.py  mcp_app.py  operations.py  result.py  schemas.py  smolagents_bridge.py
agents/tests/: test_hf_runner.py  test_operations.py  test_result.py  test_smolagents_bridge.py
app/: error.tsx  globals.css  layout.tsx  loading.tsx
app/ideas/: page.tsx
app/results/[id]/: page.tsx
components/: Dashboard.tsx  EmptyState.tsx  GumroadPreviewModal.tsx  MobileNav.tsx  Navbar.tsx  ProductBuilder.tsx  ResultsView.tsx  ThemeProvider.tsx
components/ui/: button.tsx  card.tsx
lib/: design-tokens.ts  godlyGenerator.ts  store.ts  types.ts
